# nixai

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  _pyinstaller_common.py  nixai-mac.spec  nixai.spec  pyproject.toml  requirements-desktop.txt  requirements.txt
.claude/: launch.json
app/: __init__.py  agent.py  agentic_context.py  agentic_routing.py  agentic_runner.py  agentic_schedule.py  agentic_scheduler.py  cli.py  code_context.py  code_context_tools.py  config.py  context_builder.py  database.py  desktop.py  effort.py  json_utils.py  mac_launcher.py  main.py  memory.py  mistake_distiller.py  mistake_review.py  mistakes.py  models.py  roles.py  runtime_meta.py  streaming.py  task_discovery.py  title_generation.py  validation.py  workflow_scratch.py
app/api/: agentic_tasks.py  chats.py  messages.py  mistakes.py  roles.py  runs.py  settings.py  tools.py  updates.py
app/db/: __init__.py  agentic_tasks.py  chats.py  connection.py  messages.py  schema.py  workflow_runs.py  workflow_state.py  workflow_trace.py
app/llm/: ollama.py
app/services/: __init__.py  agentic_tasks.py  prompt_composer.py  tool_policy.py
app/static/: agentic-tasks-ui.js  api.js  app.js  approvals-ui.js  chat.css  chat.js  dirty-tracker.js  dom.js  forms.css  helpers.js  index.html  mistakes-ui.js  modals.css  roles-ui.js  settings.css  settings.js  state.js  stream.js  style.css  ui.js  update-banner.js  workflow-builder.js  workflow-editor.js  workflow.css  workflows-ui.js
app/static/chat/: chat-list.js  composer.js  message-rendering.js  streaming.js
app/static/runs/: api.js  inspector-canvas.js  reducer.js  runs-ui.js  sse-client.js  timeline-slider.js
app/static/workflows/: canvas.js  inspector.js  persistence.js
app/templates/: error.html  loading.html
app/tools/: __init__.py  catalog.py  definitions.py  editing.py  factories.py  filesystem.py  git.py  internet.py  notification.py  registry.py  shell.py  workspace.py
app/tools/routing/: __init__.py  cosine.py  embeddings.py  hard_filter.py  keyword.py  semantic.py  types.py
app/workflows/: __init__.py  conditions.py  events.py  executor.py  ir.py  models.py  nodes.py  phases.py  presets.py  prompts.py  replay.py  resolver.py  run_bus.py  runner.py  runtime_trace.py  state.py
app/workflows/presets/: agentic_direct_orchestrator.json  agentic_review_loop.json  chat_direct.json  code_direct_worker.json  code_review_loop.json  deep_orchestra.json  simple.json  tool_research.json  vision_extract.json
assets/macos/: NixAI.icns
scripts/: build_linux_binary.sh  build_macos_app.sh  build_macos_release.sh  build_windows_binary.cmd  build_windows_binary.ps1  check_static_css.js  install_macos_app.sh
tests/: conftest.py  test_agentic_routing.py  test_agentic_runner.py  test_agentic_schedule.py  test_api_chats.py  test_api_runs.py  test_code_context.py  test_config.py  test_context_builder.py  test_database.py  test_import_smoke.py  test_internet_tools.py  test_json_utils.py  test_notification_tool.py  test_run_bus.py  test_services_agentic_tasks.py  test_services_tool_policy.py  test_title_generation.py  test_tool_factories.py  test_validation.py  test_vision_workflow.py  test_workflow_conditions.py  test_workflow_events.py  test_workflow_executor.py  test_workflow_executor_trace.py  test_workflow_models.py  test_workflow_phases.py  test_workflow_phases_trace.py  test_workflow_prompts.py  test_workflow_replay_planner.py  test_workflow_resolver.py  test_workflow_run_signals.py  test_workflow_runner_trace.py  test_workflow_runtime_trace.py  test_workflow_state.py  test_workflow_state_projection.py  test_workspace_edit_tool.py  test_workspace_tools.py
tests/fakes/: __init__.py  ollama.py
tests/js/: api-stream.test.mjs  dirty-tracker.test.mjs  helpers.test.mjs  run-api.test.mjs  run-reducer.test.mjs  run-sse-client.test.mjs  workflow-builder.test.mjs  workflow-editor.test.mjs
