[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nixai"
version = "0.1.0"
description = "Local AI agent runner for Ollama models"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "platformdirs>=4.2.0",
  "pytest>=8.3.0",
]

[project.optional-dependencies]
desktop = [
  "pywebview>=5.3",
  "pyobjc-core<12; sys_platform == 'darwin' and python_version < '3.10'",
  "pyobjc-framework-Cocoa<12; sys_platform == 'darwin' and python_version < '3.10'",
  "pyobjc-framework-Quartz<12; sys_platform == 'darwin' and python_version < '3.10'",
  "pyobjc-framework-Security<12; sys_platform == 'darwin' and python_version < '3.10'",
  "pyobjc-framework-WebKit<12; sys_platform == 'darwin' and python_version < '3.10'",
  "pyobjc-framework-UniformTypeIdentifiers<12; sys_platform == 'darwin' and python_version < '3.10'",
]
test = [
  "pytest>=8.3.0",
]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.format]
# Keep formatter adoption incremental; these legacy files need a separate
# mass-format commit before they can be removed from this list.
exclude = [
  "app/agent.py",
  "app/agentic_context.py",
  "app/agentic_routing.py",
  "app/agentic_runner.py",
  "app/agentic_schedule.py",
  "app/api/agentic_tasks.py",
  "app/api/chats.py",
  "app/api/mistakes.py",
  "app/api/settings.py",
  "app/api/tools.py",
  "app/code_context.py",
  "app/config.py",
  "app/database.py",
  "app/db/agentic_tasks.py",
  "app/db/chats.py",
  "app/db/messages.py",
  "app/desktop.py",
  "app/effort.py",
  "app/llm/ollama.py",
  "app/main.py",
  "app/memory.py",
  "app/mistake_distiller.py",
  "app/mistake_review.py",
  "app/task_discovery.py",
  "app/tools/git.py",
  "app/tools/internet.py",
  "app/tools/notification.py",
  "app/tools/registry.py",
  "app/tools/routing/hard_filter.py",
  "app/tools/routing/keyword.py",
  "app/tools/routing/types.py",
  "app/tools/shell.py",
  "app/workflows/models.py",
  "app/workflows/presets.py",
  "app/workflows/prompts.py",
  "app/workflows/runner.py",
  "app/workflows/state.py",
]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"app/agentic_routing.py" = ["F401"]

[project.scripts]
nixai = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app" = ["static/*.html", "static/*.css", "static/*.js"]
