[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nixai"
version = "0.1.0"
description = "Local AI agent runner for Ollama models"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Flo Knapp" }]
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "platformdirs>=4.2.0",
  "pytest>=8.3.0",
]

[project.optional-dependencies]
desktop = [
  "pywebview>=5.3",
  "pyobjc-core<12; sys_platform == 'darwin' and python_version < '3.10'",
  "pyobjc-framework-Cocoa<12; sys_platform == 'darwin' and python_version < '3.10'",
  "pyobjc-framework-Quartz<12; sys_platform == 'darwin' and python_version < '3.10'",
  "pyobjc-framework-Security<12; sys_platform == 'darwin' and python_version < '3.10'",
  "pyobjc-framework-WebKit<12; sys_platform == 'darwin' and python_version < '3.10'",
  "pyobjc-framework-UniformTypeIdentifiers<12; sys_platform == 'darwin' and python_version < '3.10'",
]
test = [
  "pytest>=8.3.0",
]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.format]
quote-style = "preserve"
indent-style = "space"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"app/agentic_routing.py" = ["F401"]

[project.scripts]
nixai = "app.cli:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app" = ["static/*.html", "static/*.css", "static/*.js"]
